--- a/MyCodingLife-Blogs-for-HardcoreCoders.html
+++ b/MyCodingLife-Blogs-for-HardcoreCoders.html
@@ -189,7 +189,7 @@
   <div id="carouselExampleFade" class="carousel slide carousel-fade my-0" data-bs-ride="carousel">
     <div class="carousel-inner carousel-fade">
       <div class="carousel-item active">
-        <img src="/imgs/img2.jfif" class="d-block w-100" alt="...">
+        <img src="img2.jfif" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Welcome to MyCodingLife!</h5>
           <p>We make sure that you know all about code.</p>
@@ -199,14 +199,14 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/imgs/img4.jfif" class="d-block w-100" alt="...">
+        <img src="img4.jfif" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block" style="color: black;">
           <h5>Here You will get to know all about Various Trends in Technology</h5>
           <p>Failing to Write code properly? We're here</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/imgs/img1.jfif" class="d-block w-100" alt="...">
+        <img src="img1.jfif" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block dark">
           <h5>Get to know about All hidden Treats of Becoming A Programmer</h5>
           <p>We Bring to you Our Coding Treats. Stay Tuned</p>
@@ -240,7 +240,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" src="imgs/thumb1.html" alt="">
+            <img class="bd-placeholder-img" width="200" height="250" src="thumb1.html" alt="">
 
           </div>
         </div>
@@ -257,7 +257,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" src="/imgs/thumb3.jfif" alt="">
+            <img class="bd-placeholder-img" width="200" height="250" src="thumb3.jfif" alt="">
 
           </div>
         </div>
@@ -278,7 +278,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" src="/imgs/thumb4.jfif" alt="">
+            <img class="bd-placeholder-img" width="200" height="250" src="thumb4.jfif" alt="">
 
           </div>
         </div>
@@ -294,7 +294,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" src="/imgs/thumb2.jfif" alt="">
+            <img class="bd-placeholder-img" width="200" height="250" src="thumb2.jfif" alt="">
 
           </div>
         </div>
