--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="webpage.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="MyCodingLife-Blogs-for-HardcoreCoders.html">Home</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link active" href="about.html">About</a>
@@ -86,7 +86,7 @@
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto img-fluid"
-                    src="/imgs/thumb5.jfif" alt="">
+                    src="thumb5.jfif" alt="">
             </div>
         </div>
         <div class="row featurette my-4 d-flex justify-content-center align-items-center my-4">
@@ -99,7 +99,7 @@
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto img-fluid"
-                    src="/imgs/thumb6.jfif" alt="">
+                    src="thumb6.jfif" alt="">
             </div>
         </div>
         <div class="row featurette my-4 d-flex justify-content-center align-items-center my-4">
@@ -112,7 +112,7 @@
             </div>
             <div class="col-md-5 order-md-1">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto img-fluid"
-                    src="/imgs/thumb7.jfif" alt="">
+                    src="/thumb7.jfif" alt="">
             </div>
         </div>
         <div class="row featurette my-4 d-flex justify-content-center align-items-center my-4">
@@ -125,7 +125,7 @@
             </div>
             <div class="col-md-5 order-md-1">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto img-fluid"
-                    src="/imgs/thumb8.jfif" alt="">
+                    src="/thumb8.jfif" alt="">
             </div>
         </div>
     </div>
