--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
             </div>
             <div class="col-md-5 order-md-1">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto img-fluid"
-                    src="/thumb7.jfif" alt="">
+                    src="thumb7.jfif" alt="">
             </div>
         </div>
         <div class="row featurette my-4 d-flex justify-content-center align-items-center my-4">
@@ -125,7 +125,7 @@
             </div>
             <div class="col-md-5 order-md-1">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto img-fluid"
-                    src="/thumb8.jfif" alt="">
+                    src="thumb8.jfif" alt="">
             </div>
         </div>
     </div>
